# esp32-projects

./: .gitignore  .gitmodules  LICENSE  README.md
arduino/: README.md
arduino/ftm_initiator/: README.md  ftm_initiator.ino
arduino/ftm_responder/: ftm_responder.ino
components/example_component/: CMakeLists.txt  example_component.c
demo/: README.md
demo/azure/azure-as-component/: CMakeLists.txt
demo/azure/azure-as-component-inside/: CMakeLists.txt
demo/azure/azure-as-component-inside/components/my_component/: CMakeLists.txt  my_component.c
demo/azure/azure-as-component-inside/components/my_component/nested_component/: CMakeLists.txt  nested_component.c
demo/azure/azure-as-component-inside/components/my_component/nested_component/include/: nested_component.h
demo/azure/azure-as-component-inside/components/my_component/port/inc/: esp_azure_iot_hub_client.h
demo/azure/azure-as-component-inside/main/: CMakeLists.txt  app_main.c
demo/azure/azure-as-component-nested/: CMakeLists.txt
demo/azure/azure-as-component-nested/main/: CMakeLists.txt  azure_main.c
demo/esp32/lvgl/: CMakeLists.txt
demo/esp32/lvgl/main/: CMakeLists.txt  lvgl.c
demo/esp32/lvgl_basic/: .gitignore  CMakeLists.txt  sdkconfig.defaults
demo/esp32/lvgl_basic/main/: CMakeLists.txt  lvgl_basic.c
demo/ftm/ftm-responder/: sdkconfig.defaults
demo/lora/lora-demo-lib/: CMakeLists.txt
demo/sound_spectrum/: Makefile  README.md  sdkconfig.defaults
demo/sound_spectrum/main/: CMakeLists.txt  i2s_spectrum_example_main.c
rainmaker/arduino/light_switch_demo/: light_switch_demo.ino
(+12 files in other folders)
